force-app/main/default/objects/Employee_Performance_Management__c/Employee_Performance_Management__c.object-meta.xml
<CustomObject>
    <label>Employee Performance Management</label>
    <nameField>
        <displayFormat>EPM-{00000}</displayFormat>
        <label>Employee Performance Management #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Performance Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>