force-app/main/default/objects/Employee_Performance_Management__c/fields/Employee_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Hire_Date__c</fullName>
    <formula>Employee_Name__r.Hire_Date__c</formula>
    <label>Employee Hire Date</label>
    <type>Date</type>
</CustomField>