force-app/main/default/objects/Employee_Performance_Management__c/fields/Employee_Job_Functions__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Functions__c</fullName>
    <formula>TEXT(Employee_Name__r.HR_Division__c)</formula>
    <label>Employee Job Function</label>
    <type>Text</type>
</CustomField>