force-app/main/default/objects/Employee_Performance_Management__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employee_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>