force-app/main/default/objects/Employee_Performance_Management__c/fields/Employee_Title__c.field-meta.xml
<CustomField>
    <fullName>Employee_Title__c</fullName>
    <formula>Employee_Name__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Title</label>
    <type>Text</type>
</CustomField>