force-app/main/default/objects/Employee_Performance_Management__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locations</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Employee Performance Management</relationshipLabel>
    <relationshipName>Employee_Performance_Management</relationshipName>
    <type>Lookup</type>
</CustomField>