force-app/main/default/objects/Employee_Performance_Management__c/fields/Performance_Year__c.field-meta.xml
<CustomField>
    <fullName>Performance_Year__c</fullName>
    <label>Performance Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>