force-app/main/default/objects/Employee_Performance_Management__c/fields/Value_Assessment_Count__c.field-meta.xml
<CustomField>
    <fullName>Value_Assessment_Count__c</fullName>
    <label>Value Assessment Count</label>
    <summaryFilterItems>
        <field>Employee_Performance_Objective__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Value Assessment</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Performance_Objective__c.Employee_Performance_Management__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>